--- a/templates/admin/apbdes/list_apbdes.html
+++ b/templates/admin/apbdes/list_apbdes.html
@@ -70,7 +70,7 @@
                         <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                             <a href="{{ url_for('edit_apbdes', apbdes_id=apbdes.id) }}" class="text-indigo-600 hover:text-indigo-900 mr-4">Edit</a>
                             <form action="{{ url_for('hapus_apbdes', apbdes_id=apbdes.id) }}" method="POST" class="inline" onsubmit="return confirm('Apakah Anda yakin ingin menghapus data APBDes ini?');">
-                                {{ form.csrf_token if form.csrf_token else '' }} {# Flask-WTF CSRF if form is passed, otherwise allow for manual setup #}
+                                {{ form.csrf_token }} {# FIXED: Sekarang 'form' pasti ada #}
                                 <button type="submit" class="text-red-600 hover:text-red-900">Hapus</button>
                             </form>
                         </td>
