--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,12 @@
                     <svg class="w-5 h-5 sm:w-6 sm:h-6 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 20H5a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v1m2 13a2 2 0 01-2-2V7m2 13a2 2 0 002-2V9a2 2 0 00-2-2h-3m-2 4l3 3m0 0l3-3m-3 3V4"></path></svg>
                     Lihat Berita
                 </a>
+                {# NEW: Tombol Cek APBDes #}
+                <a href="{{ url_for('daftar_apbdes_publik') }}" class="w-full sm:w-auto bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 sm:px-8 rounded-full shadow-lg transition-all duration-300 transform hover:scale-105 flex items-center justify-center text-base sm:text-lg">
+                    <svg class="w-5 h-5 sm:w-6 sm:h-6 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2h2M7 13h10m-5-5v10"></path></svg>
+                    Cek APBDes
+                </a>
+                {# END NEW #}
             </div>
         </div>
     </section>
